[package]
name = "webrtc_movie_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
axum-macros = "0.3.0"
base64 = "0.20.0"
futures = "0.3"
gstreamer = "0.19.3"
gstreamer-editing-services = "0.19.2"
gstreamer-app = "0.19.2"
serde_json = "1.0.89"
tokio = "1.23.0"
tracing = "0.1"
tracing-subscriber = "0.3"
webrtc = "0.6.0"
uuid = "1.2.2"
serde = "1.0.152"
